add javascript for mathjax

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,4 +11,7 @@
         <link rel="stylesheet" href="{{ site.url }}/css/syntax.css" type="text/css" />
         <link rel="shortcut icon" href="{{ site.url }}/favicon.ico" type="image/x-icon" />
     </head>
+    <script type="text/javascript"
+        src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
     <body>
