--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,8 @@
 {% include header.html %}
+<script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
+    
 <div class="container">
     {% include navigation.html %}
     <div class="main">
