new MathJax web address

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,5 +10,8 @@
         <link rel="stylesheet" href="{{ site.url }}/css/small.css" type="text/css" media="(max-width: 720px)"/>
         <link rel="stylesheet" href="{{ site.url }}/css/syntax.css" type="text/css" />
         <link rel="shortcut icon" href="{{ site.url }}/favicon.ico" type="image/x-icon" />
+        <script type="text/javascript" async
+          src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML">
+        </script>
     </head>
     <body>
